--- a/devtools/client/themes/light-theme.css
+++ b/devtools/client/themes/light-theme.css
@@ -1736,33 +1736,6 @@ background
 ;
 }
 .
-cm
--
-s
--
-markup
--
-view
-pre
-{
-line
--
-height
-:
-1
-.
-4em
-;
-min
--
-height
-:
-1
-.
-4em
-;
-}
-.
 CodeMirror
 -
 hints
